# CVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculator.cvm  compiler.cpp  compiler.h  debug.cpp  debug.h  interactive_test.cvm  lexer.cpp  lexer.h  main.cpp  main.cvm  parser.cpp  parser.h  run.bat  test.cvm  truth_machine.cvm  vm.cpp  vm.h
